--- a/ubuntu/ubuntu16/Dockerfile
+++ b/ubuntu/ubuntu16/Dockerfile
@@ -111,13 +111,13 @@ RUN \
     sed -i "s/^\(PermitRootLogin yes\)/#\1\nPermitRootLogin without-password/g" /etc/ssh/sshd_config && \
     sed -i "s/^\(ChallengeResponseAuthentication no\)/#\1\nChallengeResponseAuthentication yes/g" /etc/ssh/sshd_config && \
     # sed -i "s/^\(#PasswordAuthentication yes\)/\1\nPasswordAuthentication yes/g" /etc/ssh/sshd_config && \
-    sed -i "s/^\(PATH=\"\/usr\/local\/sbin:\/usr\/local\/bin:\/usr\/sbin:\/usr\/bin:\/sbin:\/bin:\/usr\/games\"\)$/\1\nLC_ALL=en_US.UTF-8/g" /etc/environment && \
+    sed -i "s/^\(PATH=\"\/usr\/local\/sbin:\/usr\/local\/bin:\/usr\/sbin:\/usr\/bin:\/sbin:\/bin:\/usr\/games\"\)$/\1\nLC_ALL=en_US.UTF-8/g" /etc/environment
 RUN \
     chmod 640 /etc/sudoers && \
     sed -i "s/^\(# User privilege specification\)$/\1\naction  ALL=(ALL)       NOPASSWD:ALL/g" /etc/sudoers && \
     chmod 440 /etc/sudoers && \
-echo 'action:nitrousio' | chpasswd && \
-chsh -s /usr/bin/zsh action
+    echo 'action:nitrousio' | chpasswd && \
+    chsh -s /usr/bin/zsh action
 RUN \
     chmod 775 /var/run/screen && \
     chmod 777 -R /var/spool/cron && \
